refactor(config): use injected FileConfiguration in readers and remove unused params